# smart-retail-shelf-auditing

./: .env.example  .gitignore  main.py  pyproject.toml  requirements.txt
backend/: __init__.py  main.py  schemas.py
backend/repositories/: __init__.py  model_repository.py
backend/routes/: __init__.py  detect.py  health.py  report.py
backend/services/: __init__.py  inventory.py
configs/: inference_config.yaml  training_config.yaml
docker/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml
docs/: SDP.md
experiments/: experiment_log.md
frontend/: __init__.py  app.py
scripts/: build_manifests.py
src/data/: __init__.py  augmentations.py  dataloader.py  dataset.py  preprocessing.py
src/eval/: __init__.py  evaluate.py
src/inference/: __init__.py  inference.py
src/training/: __init__.py  config.py  train.py
src/utils/: __init__.py  io.py  logger.py  visualization.py
tests/: test_data_pipeline.py
